--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
 
 /* jumbotron */
 .jumbotron {
-	background-image: url("https://images.unsplash.com/38/awhCbhLqRceCdjcPQUnn_IMG_0249.jpg?dpr=2&auto=format&fit=crop&w=1500&h=1125&q=80&cs=tinysrgb&crop=&bg=");
+	background: linear-gradient(
+		rgba(20,20,20, 0.3),
+		rgba(20,20,20, 0.3)),
+		url("https://images.unsplash.com/38/awhCbhLqRceCdjcPQUnn_IMG_0249.jpg?dpr=2&auto=format&fit=crop&w=1500&h=1125&q=80&cs=tinysrgb&crop=&bg=");
 	-webkit-background-size: cover;
 	background-size: cover;
 	height: 600px;
